--- a/scripts/lib/build_perf/html/report.html
+++ b/scripts/lib/build_perf/html/report.html
@@ -3,7 +3,7 @@
 <head>
 {# Scripts, for visualization#}
 <!--START-OF-SCRIPTS-->
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/d3@7"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/d3@^6.1"></script>
 
 {# Render measurement result charts #}
 {% for test in test_data %}
