--- a/scripts/lib/build_perf/html/measurement_chart_d3.html
+++ b/scripts/lib/build_perf/html/measurement_chart_d3.html
@@ -1,12 +1,9 @@
 <script type="module">
 
 // Declare the chart dimensions and margins.
-const width = 928;
-const height = 500;
-const marginTop = 20;
-const marginRight = 30;
-const marginBottom = 30;
-const marginLeft = 40;
+const margin = ({top: 20, right: 20, bottom: 30, left: 30}),
+    width = 460 - margin.left - margin.right,
+    height = 400 - margin.top - margin.bottom;
 
 // Get data 
 const rawData = [
@@ -22,42 +19,103 @@ const convertToMinute = (time) => {
 // Assuming the array quantities are durations in the format [hours, minutes, seconds, milliseconds]
 const data = rawData.map(([commit, quantity]) => ({commit, quantity: (Array.isArray(quantity) ? convertToMinute(quantity) : quantity)}));
 
-// Declare the x (horizontal position) scale.
-const x = d3.scaleUtc(d3.extent(data, d => d.commit), [marginLeft, width - marginRight])
 
-// Declare the y (vertical position) scale.
-const yAxisData = data.map(d => d.quantity);
-const y = d3.scaleLinear([0, d3.max(data, d => d.quantity)], [height - marginBottom, marginTop])
-            .domain(d3.extent(yAxisData))
+const zoom = d3
+    .zoom()
+    .scaleExtent([1, 32])
+    .extent([[margin.left, 0], [width - margin.right, height]])
+    .translateExtent([
+      [margin.left, -Infinity],
+      [width - margin.right, Infinity]
+    ])
+    .on("zoom", zoomed);
 
-// Declare the line generator.
-const line = d3.line()
-      .x(d => x(d.commit))
-      .y(d => y(d.quantity));
+
 
 // Create the SVG container.
 const svg = d3.create("svg")
       .attr("width", width)
       .attr("height", height)
       .attr("viewBox", [0, 0, width, height])
-      .attr("style", "max-width: 100%; height: auto; height: intrinsic;");
+      .style("overflow", "visible");
+
+// Declare the x (horizontal position) scale.
+const x = d3.scaleLinear(d3.extent(data, d => d.commit), [margin.left, width - margin.right])
+const xcopy = x.copy()
+
+// Declare the y (vertical position) scale.
+const yAxisData = data.map(d => d.quantity);
+const y = d3.scaleLinear([{{ chart_opts.haxis.min }}, {{ chart_opts.haxis.max }}], [height - margin.bottom, margin.top])
+            .domain(d3.extent(yAxisData))
+const ycopy = y.copy()
+
+const yAxis = svg.append("g")
+      .call(d3.axisLeft(y));
+
+const xAxis = svg.append("g")
+      .attr("transform", `translate(0, ${height})`)
+      .call(d3.axisBottom(x));
+
+// Declare the line generator.
+ const line = d3.line()
+      .x(d => x(d.commit))
+      .y(d => y(d.quantity));
+
+const gx = svg.append("g").call(xAxis, x);
+
+const gy = svg.append("g").call(yAxis, y);
 
 // Add the x-axis.
-svg.append("g")
-    .attr("transform", `translate(0,${height - marginBottom})`)
-    .call(d3.axisBottom(x));
+//svg.append("g")
+  //  .attr("transform", `translate(0,${height - margin.bottom})`)
+    //.call(d3.axisBottom(x));
 
 // Add the y-axis.
-svg.append("g")
-    .attr("transform", `translate(${marginLeft},0)`)
-    .call(d3.axisLeft(y));
+//svg.append("g")
+  //  .attr("transform", `translate(${margin.left},0)`)
+    //.call(d3.axisLeft(y));
+
 
 // Append a path for the line.
-svg.append("path")
-      .attr("fill", "none")
-      .attr("stroke", "steelblue")
-      .attr("stroke-width", 1.5)
-      .attr("d", line(data));
+//svg.append("path")
+//      .attr("fill", "none")
+//      .attr("stroke", "steelblue")
+//      .attr("stroke-width", 1.5)
+//     .attr("d", line(data));
+const path = svg
+    .append("g")
+    .attr("fill", "none")
+    .attr("stroke", "steelblue")
+    .attr("stroke-width", 1.5)
+    .attr("stroke-linejoin", "round")
+    .attr("stroke-linecap", "round")
+    .selectAll("path")
+    .data(d)
+    .join("path")
+    .style("mix-blend-mode", "multiply")
+    .attr("d", d => line(d.commit, x, y));
+
+  function zoomed(event) {
+    const xz = event.transform.rescaleX(x);
+    const yz = event.transform.rescaleY(y);
+
+    // updata domain on copied x scale so hover function can find the correct point
+    xcopy.domain(xz.domain());
+    ycopy.domain(yz.domain());
+
+    // redraw paths with new x zoomed scale
+    path.attr("d", d => line(d.commit, xz, yz));
+    // find and redraw closest point path
+    const pointer = d3.pointer(event, this);
+    if (event.sourceEvent.type === "mousemove") {
+      highlightPoint(pointer, svg, path);
+    }
+    gx.call(xAxis, xz);
+    gy.call(yAxis, yz);
+}
+
+ // svg.call(hover, path);
+  svg.call(zoom);
 
 // Append the SVG element.
 {{chart_elem_id}}.append(svg.node());
