--- a/scripts/lib/build_perf/html/measurement_chart_d3.html
+++ b/scripts/lib/build_perf/html/measurement_chart_d3.html
@@ -1,9 +1,9 @@
 <script type="module">
 
 // Declare the chart dimensions and margins.
-const margin = ({top: 20, right: 20, bottom: 30, left: 30}),
-    width = 460 - margin.left - margin.right,
-    height = 400 - margin.top - margin.bottom;
+const width = 928;
+const height = 500;
+const margin = ({top: 20, right: 20, bottom: 30, left: 30});
 
 // Get data 
 const rawData = [
@@ -49,73 +49,91 @@ const y = d3.scaleLinear([{{ chart_opts.haxis.min }}, {{ chart_opts.haxis.max }}
             .domain(d3.extent(yAxisData))
 const ycopy = y.copy()
 
-const yAxis = svg.append("g")
-      .call(d3.axisLeft(y));
+const xAxis = (g, x) =>
+      g.attr("transform", `translate(0,${height - margin.bottom})`).call(
+      d3
+            .axisBottom(x)
+            .ticks(width / 80)
+            .tickSizeOuter(0)
+      )
 
-const xAxis = svg.append("g")
-      .attr("transform", `translate(0, ${height})`)
-      .call(d3.axisBottom(x));
+const yAxis = (g, y) =>
+      g
+            .attr("transform", `translate(${margin.left},0)`)
+            .call(d3.axisLeft(y))
+            .call(g => g.select(".domain").remove())
+            .call(g =>
+            g
+                  .select(".tick:last-of-type text")
+                  .attr("x", 3)
+                  .attr("text-anchor", "start")
+                  .attr("font-weight", "bold")
+                  .text(data.y)
+            )
 
 // Declare the line generator.
  const line = d3.line()
       .x(d => x(d.commit))
       .y(d => y(d.quantity));
 
+// Create the SVG container.
+const svg = d3.create("svg")
+      .attr("width", width)
+      .attr("height", height)
+      .attr("viewBox", [0, 0, width, height])
+      // .attr("style", "max-width: 100%; height: auto; height: intrinsic;");
+      .style("overflow", "visible");
+
+// // Add the x-axis.
+// const xAxis = (g, x) =>
+//       g.attr("transform", `translate(0,${height - margin.bottom})`)
+//       .call(d3.axisBottom(x));
+
+// // Add the y-axis.
+// const yAxis = (g, x) =>
+//       g.attr("transform", `translate(${margin.left},0)`)
+//       .call(d3.axisLeft(y));
+
 const gx = svg.append("g").call(xAxis, x);
 
 const gy = svg.append("g").call(yAxis, y);
 
-// Add the x-axis.
-//svg.append("g")
-  //  .attr("transform", `translate(0,${height - margin.bottom})`)
-    //.call(d3.axisBottom(x));
-
-// Add the y-axis.
-//svg.append("g")
-  //  .attr("transform", `translate(${margin.left},0)`)
-    //.call(d3.axisLeft(y));
-
-
 // Append a path for the line.
-//svg.append("path")
-//      .attr("fill", "none")
-//      .attr("stroke", "steelblue")
-//      .attr("stroke-width", 1.5)
-//     .attr("d", line(data));
-const path = svg
-    .append("g")
-    .attr("fill", "none")
-    .attr("stroke", "steelblue")
-    .attr("stroke-width", 1.5)
-    .attr("stroke-linejoin", "round")
-    .attr("stroke-linecap", "round")
-    .selectAll("path")
-    .data(d)
-    .join("path")
-    .style("mix-blend-mode", "multiply")
-    .attr("d", d => line(d.commit, x, y));
+let path = svg.append("path")
+      .attr("fill", "none")
+      .attr("stroke", "steelblue")
+      .attr("stroke-width", 1.5)
+      .attr("d", line(data));
 
-  function zoomed(event) {
-    const xz = event.transform.rescaleX(x);
-    const yz = event.transform.rescaleY(y);
+const zoom = d3
+      .zoom()
+      .scaleExtent([1, 32])
+      .extent([[margin.left, 0], [width - margin.right, height]])
+      .translateExtent([
+            [margin.left, -Infinity],
+            [width - margin.right, Infinity]
+      ])
+      .on("zoom", zoomed);
 
-    // updata domain on copied x scale so hover function can find the correct point
-    xcopy.domain(xz.domain());
-    ycopy.domain(yz.domain());
 
-    // redraw paths with new x zoomed scale
-    path.attr("d", d => line(d.commit, xz, yz));
-    // find and redraw closest point path
-    const pointer = d3.pointer(event, this);
-    if (event.sourceEvent.type === "mousemove") {
-      highlightPoint(pointer, svg, path);
-    }
-    gx.call(xAxis, xz);
-    gy.call(yAxis, yz);
+function zoomed(event) {
+      const xz = event.transform.rescaleX(x);
+      const yz = event.transform.rescaleY(y);
+
+      // update domain on copied x scale so hover function can find the correct point
+      xcopy.domain(xz.domain());
+      ycopy.domain(yz.domain());
+
+      // redraw paths with new x zoomed scale
+      path.attr("d", line(data));
+          // find and redraw closest point path
+      const pointer = d3.pointer(event, this);
+
+      gx.call(xAxis, xz);
+      gy.call(yAxis, yz);
 }
 
- // svg.call(hover, path);
-  svg.call(zoom);
+svg.call(zoom);
 
 // Append the SVG element.
 {{chart_elem_id}}.append(svg.node());
