--- a/scripts/lib/build_perf/html/report.html
+++ b/scripts/lib/build_perf/html/report.html
@@ -3,18 +3,16 @@
 <head>
 {# Scripts, for visualization#}
 <!--START-OF-SCRIPTS-->
-<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-<script type="text/javascript">
-google.charts.load('current', {'packages':['corechart']});
-var chartsDrawing = 0;
-</script>
+<script src="https://cdn.jsdelivr.net/npm/d3@^6.1"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/billboard.js@3.10.3/dist/billboard.css">
+<script src="https://cdn.jsdelivr.net/npm/billboard.js"></script>
 
 {# Render measurement result charts #}
 {% for test in test_data %}
   {% if test.status == 'SUCCESS' %}
     {% for measurement in test.measurements %}
       {% set chart_elem_id = test.name + '_' + measurement.name + '_chart' %}
-      {% include 'measurement_chart.html' %}
+      {% include 'measurement_chart_d3billboard.html' %}
     {% endfor %}
   {% endif %}
 {% endfor %}
