--- a/scripts/lib/build_perf/html/measurement_chart_d3billboard.html
+++ b/scripts/lib/build_perf/html/measurement_chart_d3billboard.html
@@ -1,10 +1,10 @@
 <script type="module">
   // Get data 
   const rawData = [
-        {% for sample in measurement.samples %}
-          [{{ sample.commit_num }}, {{ sample.mean.gv_value() }}, {{ sample.start_time }}],
-        {% endfor %}
-      ];
+    {% for sample in measurement.samples %}
+      [{{ sample.commit_num }}, {{ sample.mean.gv_value() }}, {{ sample.start_time }}],
+    {% endfor %}
+  ];
 
   const convertToMinute = (time) => {
     return time[0]*60 + time[1] + time[2]/60 + time[3]/3600;
@@ -12,14 +12,10 @@
 
   // Assuming the array quantities are durations in the format [hours, minutes, seconds, milliseconds]
   const dataX = rawData.map(([commit, value, time]) => {
-    // Time 0 means no date information is available and commit number is used instead
-    if (time > 0) {
-      // The Date object takes value in milliseconds rather than seconds. So to use a Unix timestamp we multiply it by 1000.
-      const date = new Date(time * 1000)
-      // billboardjs supports date format as 'YYYY-MM-DD'
-      return date.getFullYear() + '-' + (date.getMonth() + 1) + '-' + date.getDate() // Adding an extra 1 for month as January starts from 0
-    }
-    return commit
+    // The Date object takes value in milliseconds rather than seconds. So to use a Unix timestamp we multiply it by 1000.
+    const date = new Date(time * 1000)
+    // billboardjs supports date format as 'YYYY-MM-DD'
+    return date.getFullYear() + '-' + (date.getMonth() + 1) + '-' + date.getDate() // Adding an extra 1 for month as January starts from 0
   });
   dataX.unshift('dateOrCommit');
 
@@ -85,6 +81,9 @@
           return format(value);
         }
       }
+    },
+    legend: {
+      show: false
     },
     bindto: {{chart_elem_id}}
   });
