--- a/scripts/lib/build_perf/html/report.html
+++ b/scripts/lib/build_perf/html/report.html
@@ -54,26 +54,37 @@
   background-color: #f0f0f0;
   margin-left: 10px;
 }
+.card-container {
+  border-bottom-width: 1px;
+  padding: 1.25rem 3rem;
+  box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  border-radius: 0.25rem;
+}
 body {
   font-family: 'Helvetica', sans-serif;
-  text-align: center;
   margin: 3rem 8rem;
 }
+h1 {
+  text-align: center;
+}
 h2 {
-  font-size: 20px;
+  font-size: 1.5rem;
   margin-bottom: 0px;
   color: #707070;
   padding-top: 1.5rem;
 }
 h3 {
-  font-size: 16px;
+  font-size: 1.3rem;
   margin: 0px;
   color: #707070;
+  padding: 1.5rem 0;
 }
 h4 {
   font-size: 14px;
   font-weight: lighter;
   line-height: 1.2rem;
+  margin: auto;
+  padding-top: 1rem;
 }
 table {
   margin-top: 1.5rem;
@@ -88,6 +99,14 @@ tr:first-child {
 tr:last-child {
   border-bottom: none;
 }
+a {
+  text-decoration: none;
+  font-weight: bold;
+  color: #0000EE;
+}
+a:hover {
+  color: #8080ff;
+}
 </style>
 
 <title>{{ title }}</title>
@@ -98,7 +117,7 @@ tr:last-child {
 {%- endmacro %}
 
 <body><div>
-  <h1>Performance Test Report</h1>
+  <h1 style="text-align: center;">Performance Test Report</h1>
   {# Test metadata #}
   <h2>General</h2>
   <h4>The table provides an overview of the comparison between two selected commits from the same branch.</h4>
@@ -138,7 +157,7 @@ tr:last-child {
         {% for measurement in test.measurements %}
           <tr {{ row_style }}>
             {% if loop.index == 1 %}
-              <td>{{ test.name }}: {{ test.description }}</td>
+              <td><a href=#{{test.name}}>{{ test.name }}: {{ test.description }}</a></td>
             {% else %}
               {# add empty cell in place of the test name#}
               <td></td>
@@ -170,8 +189,9 @@ tr:last-child {
   <h2>Test details</h2>
   <h4>The following section provides details of each test, accompanied by charts representing build time and disk usage over time or by commit number.</h4>
   {% for test in test_data %}
-  <h3>{{ test.name }}: {{ test.description }}</h3>
+  <h3 style="color: #000;" id={{test.name}}>{{ test.name }}: {{ test.description }}</h3>
     {% if test.status == 'SUCCESS' %}
+    <div class="card-container">
       {% for measurement in test.measurements %}
         <div class="measurement">
           <h3>{{ measurement.description }}</h3>
@@ -290,7 +310,8 @@ tr:last-child {
             {% endif %}
           {% endif %}
         </div>
-      {% endfor %}
+        {% endfor %}
+      </div>
     {# Unsuccessful test #}
     {% else %}
       <span style="font-size: 150%; font-weight: bold; color: red;">{{ test.status }}
