--- a/scripts/lib/build_perf/html/report.html
+++ b/scripts/lib/build_perf/html/report.html
@@ -3,16 +3,14 @@
 <head>
 {# Scripts, for visualization#}
 <!--START-OF-SCRIPTS-->
-<script src="https://cdn.jsdelivr.net/npm/d3@^6.1"></script>
-<link rel="stylesheet" href="https://naver.github.io/billboard.js/release/latest/dist/theme/modern.css">
-<script src="https://cdn.jsdelivr.net/npm/billboard.js"></script>
+<script src=" https://cdn.jsdelivr.net/npm/echarts@5.5.0/dist/echarts.min.js "></script>
 
 {# Render measurement result charts #}
 {% for test in test_data %}
   {% if test.status == 'SUCCESS' %}
     {% for measurement in test.measurements %}
       {% set chart_elem_id = test.name + '_' + measurement.name + '_chart' %}
-      {% include 'measurement_chart_d3billboard.html' %}
+      {% include 'measurement_chart.html' %}
     {% endfor %}
   {% endif %}
 {% endfor %}
